RST-3310 Centralisation rollout
**JIRA**
[RST-3310](https://tools.hmcts.net/jira/browse/RST-3310)

**Description**
Adding Central Family Court to centralisation

--- a/config/court_slugs.yml
+++ b/config/court_slugs.yml
@@ -31,3 +31,5 @@ centralisation:
   - carlisle-combined-court
   - barrow-in-furness-county-court-and-family-court
   - preston-crown-court-and-family-court-sessions-house
+  # 5th rollout - 27/04/21
+  - central-family-court
