RST-3313 Centralisation update
**JIRA**
[RST-3313](https://tools.hmcts.net/jira/browse/RST-3313)

**Description**
6th round of court rollout planned to go live *04/05/21*

--- a/config/court_slugs.yml
+++ b/config/court_slugs.yml
@@ -33,3 +33,9 @@ centralisation:
   - preston-crown-court-and-family-court-sessions-house
   # 5th rollout - 27/04/21
   - central-family-court
+  # 6th rollout - 04/05/21
+  - kingston-upon-hull-combined-court-centre
+  - newcastle-civil-family-courts-and-tribunals-centre
+  - sheffield-combined-court-centre
+  - middlesbrough-county-court-at-teesside-combined-court
+  - york-county-court-and-family-court
