RST-3328 Centralisation update 11-05-21
**JIRA**
[RST-3328](https://tools.hmcts.net/jira/browse/RST-3328)

**Description**
6th round of court rollout planned to go live *11/05/21*

--- a/config/court_slugs.yml
+++ b/config/court_slugs.yml
@@ -40,3 +40,17 @@ centralisation:
   - teesside-combined-court-centre
   - middlesbrough-county-court-at-teesside-combined-court
   - york-county-court-and-family-court
+  # 7th rollout - 11/05/21
+  - birmingham-civil-and-family-justice-centre
+  - coventry-combined-court-centre
+  - derby-combined-court-centre
+  - dudley-county-court-and-family-court
+  - east-london-family-court
+  - leicester-county-court-and-family-court
+  - lincoln-county-court-and-family-court
+  - northampton-crown-county-and-family-court
+  - nottingham-county-court-and-family-court
+  - stoke-on-trent-combined-court
+  - wolverhampton-combined-court-centre
+  - worcester-combined-court
+  - clerkenwell-and-shoreditch-county-court-and-family-court
