Add missing court to centralisation
        teesside-combined-court-centre

--- a/config/court_slugs.yml
+++ b/config/court_slugs.yml
@@ -37,5 +37,6 @@ centralisation:
   - kingston-upon-hull-combined-court-centre
   - newcastle-civil-family-courts-and-tribunals-centre
   - sheffield-combined-court-centre
+  - teesside-combined-court-centre
   - middlesbrough-county-court-at-teesside-combined-court
   - york-county-court-and-family-court
