RST-3324 centralisation rollout 18 May 2021
**JIRA**
[RST-3324](https://tools.hmcts.net/jira/browse/RST-3324)

**Description**
Adding new courts

--- a/config/court_slugs.yml
+++ b/config/court_slugs.yml
@@ -54,3 +54,22 @@ centralisation:
   - wolverhampton-combined-court-centre
   - worcester-combined-court
   - clerkenwell-and-shoreditch-county-court-and-family-court
+  # 8th rollout - 18/05/21
+  - barnstaple-magistrates-county-and-family-court
+  - basingstoke-county-court-and-family-court
+  - bournemouth-and-poole-county-court-and-family-court
+  - bristol-civil-and-family-justice-centre
+  - exeter-combined-court-centre
+  - gloucester-and-cheltenham-county-and-family-court
+  - plymouth-combined-court
+  - portsmouth-combined-court-centre
+  - southampton-combined-court-centre
+  - swindon-combined-court
+  - taunton-crown-county-and-family-court
+  - torquay-and-newton-abbot-county-court-and-family-court
+  - truro-county-court-and-family-court
+  - yeovil-county-family-and-magistrates-court
+  - liverpool-civil-and-family-court
+  - weymouth-combined-court
+  - isle-of-wight-combined-court
+  - northampton-magistrates-court
