RST-3334 centralisation rollout 25 May 2021
**JIRA**
[RST-3334](https://tools.hmcts.net/jira/browse/RST-3334)

**Description**
Add new courts

--- a/config/court_slugs.yml
+++ b/config/court_slugs.yml
@@ -73,3 +73,15 @@ centralisation:
   - weymouth-combined-court
   - isle-of-wight-combined-court
   - northampton-magistrates-court
+  # 9th rollout - 25/05/21
+  - caernarfon-justice-centre
+  - cardiff-civil-and-family-justice-centre
+  - carmarthen-county-court-and-family-court
+  - haverfordwest-county-court-and-family-court
+  - newport-south-wales-county-court-and-family-court
+  - swansea-civil-justice-centre
+  - wrexham-county-and-family-court
+  - bedford-county-court-and-family-court
+  - canterbury-combined-court-centre
+  - hertford-county-court-and-family-court
+  - high-wycombe-magistrates-court-and-family-court
