RST 3398 Add Relationship `Grand Parent`
**JIRA**
[RST-3398](https://tools.hmcts.net/jira/browse/RST-3398)

**Description**
To align with legacy case management system (FamilyMan) and allow more cases to be processed via the (automated) robot

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
     parameters:
       test_command:
         type: string
-        default: bundle exec rake test:all_the_things master
+        default: bundle exec rake test:all_the_things
     steps:
       - checkout
 
