--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,9 @@ jobs:
     parameters:
       test_command:
         type: string
-        default: bundle exec rake test:all_the_things master
+        default: 
+          bundle exec rake test:all_the_things master
+          pa11y-ci --config pa11y/tests/.pa11yci.json
     steps:
       - checkout
 
@@ -48,6 +50,9 @@ jobs:
           command: |
             bundle install --jobs=4 --retry=3 --path vendor/bundle
             npm install
+            npm install --global --unsafe-perm pa11y-ci
+
+
 
       - save_cache:
           paths:
