changed install command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,8 @@ jobs:
           name: install dependencies
           command: |
             bundle install --jobs=4 --retry=3 --path vendor/bundle
-            npm install --global --unsafe-perm pa11y-ci
             npm install
+            npm i pa11y-ci
             
 
 
