Add pally-ci to package.json
**Description**

Add as a development dependency

--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "govuk-frontend": "^3.12.0"
+  },
+  "devDependencies": {
+    "pa11y-ci": "2.4.1"
   }
 }
