--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           command: << parameters.test_command >>
       - run:
           name: Pa11y tests
-          command: ./node_modules/pa11y-ci/bin/pa11y-ci.js --config pa11y/tests/.pa11yci.json
+          command: bundle exec rails s && ./node_modules/pa11y-ci/bin/pa11y-ci.js --config pa11y/tests/.pa11yci.json
 
   build_image:
     <<: *cloud_container
