--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,19 @@ references:
 
 
 jobs:
+  pa11yci:
+    docker: buildkite/puppeteer:v1.15.0
+    steps:
+      - checkout
+
+      - run:
+          name: install dependencies
+          command: npm install
+
+      - run:
+          name: run pally tests
+          command: npm run test-pa11y
+
   test:
     <<: *app_containers
     parameters:
@@ -66,7 +79,7 @@ jobs:
           command: << parameters.test_command >>
       - run:
           name: Pa11y tests
-          command: bundle exec rails s && ./node_modules/pa11y-ci/bin/pa11y-ci.js --config pa11y/tests/.pa11yci.json
+          command: bundle exec rails s & sleep 5; npm run test-pa11y
 
   build_image:
     <<: *cloud_container
@@ -212,10 +225,13 @@ workflows:
 #      - test:
 #          name: smoke-tests
 #          test_command: bundle exec cucumber -p smoke
-#    triggers:
-#      - schedule:
-#          cron: "0 6 * * *"
-#          filters:
-#            branches:
-#              only:
-#                - master
+  # nightly:
+  #   jobs:
+  #     - pa11yci
+  #   triggers:
+  #     - schedule:
+  #         cron: "0 2 * * *"
+  #         filters:
+  #           branches:
+  #             only:
+  #               - master
