--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,9 @@
 require: rubocop-performance
 
 AllCops:
-  TargetRubyVersion: 2.5
+  SuggestExtensions: false
+  NewCops: disable
+  TargetRubyVersion: 2.7
   Exclude:
     - './*'
     - 'db/**/*'
@@ -13,76 +15,110 @@ AllCops:
     - 'spec/**/*'
     - 'vendor/**/*'
 
+
 ####################################
 ## Customization for this project ##
 ####################################
 
-ClassLength:
+Metrics/ClassLength:
   Max: 105
 
-LineLength:
+Layout/LineLength:
   Max: 130
 
-MethodLength:
+Metrics/MethodLength:
   Max: 21
 
-AbcSize:
-  Max: 24
-
-CyclomaticComplexity:
+Metrics/CyclomaticComplexity:
   Max: 12
 
-Documentation:
+Style/Documentation:
   Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/SymbolArray:
+  Enabled: false
+
+Layout/SpaceInsideHashLiteralBraces:
+  Enabled: false
+
+Naming/PredicateName:
+  Enabled: false
+
+Style/MultilineIfModifier:
+  Enabled: false
+
+Layout/HashAlignment:
+  Enabled: false
+
+Style/IfUnlessModifier:
+  Enabled: false
+
+Style/StringLiterals:
+  Enabled: false
+
+Style/TrailingCommaInArrayLiteral:
+  Enabled: false
+
+Style/TrailingCommaInHashLiteral:
+  Enabled: false
+
+Style/TrailingCommaInArguments:
+  Enabled: false
+
+Layout/MultilineMethodCallIndentation:
+  Enabled: false
+
+Layout/EmptyLineAfterGuardClause:
+  Enabled: false
+
+Naming/RescuedExceptionsVariableName:
+  Enabled: false
+
+Naming/MemoizedInstanceVariableName:
+  EnforcedStyleForLeadingUnderscores: required
+
+Style/MissingRespondToMissing:
+  Exclude:
+    - app/presenters/c8_confidentiality_presenter.rb
+
+Style/AccessorGrouping:
+  Enabled: false
+
+Naming/VariableNumber:
+  Enabled: false
+
+Style/CommentAnnotation:
+  Enabled: false
+
+Layout/EmptyLineBetweenDefs:
+  Enabled: false
+
+Style/CaseLikeIf:
+  Enabled: false
+
+Style/HashAsLastArrayItem:
+  Enabled: false
+
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: false
+
+Style/HashEachMethods:
+  Enabled: false
+
+Style/StringConcatenation:
+  Enabled: false
+
+Style/SoleNestedConditional:
+  Enabled: false
+
+Naming/MethodParameterName:
+  Enabled: false
+
+Metrics/AbcSize:
+  Max: 24.5
 
 Performance/RedundantMerge:
   Enabled: false
-
-FrozenStringLiteralComment:
-  Enabled: false
-
-SymbolArray:
-  Enabled: false
-
-SpaceInsideHashLiteralBraces:
-  Enabled: false
-
-PredicateName:
-  Enabled: false
-
-MultilineIfModifier:
-  Enabled: false
-
-AlignHash:
-  Enabled: false
-
-IfUnlessModifier:
-  Enabled: false
-
-StringLiterals:
-  Enabled: false
-
-TrailingCommaInArrayLiteral:
-  Enabled: false
-
-TrailingCommaInHashLiteral:
-  Enabled: false
-
-TrailingCommaInArguments:
-  Enabled: false
-
-MultilineMethodCallIndentation:
-  Enabled: false
-
-EmptyLineAfterGuardClause:
-  Enabled: false
-
-RescuedExceptionsVariableName:
-  Enabled: false
-
-MemoizedInstanceVariableName:
-  EnforcedStyleForLeadingUnderscores: required
-
-MissingRespondToMissing:
-  Exclude:
-    - app/presenters/c8_confidentiality_presenter.rb
