--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
         type: string
         default: bundle exec rake test:all_the_things
     steps:
+      - browser-tools/install-browser-tools
       - checkout
 
       # Download and cache dependencies
