Add browser-tools orb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@
 #
 version: 2.1
 
+orbs: 
+  browser-tools: circleci/browser-tools@1.2.3
+
 references:
   app_containers: &app_containers
     docker:
