--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ orbs:
 references:
   app_containers: &app_containers
     docker:
-      - image: circleci/ruby:2.7.4-node-browsers
+      - image: cimg/ruby:2.7.5-browsers
         environment:
           RAILS_ENV: test
           RACK_ENV: test
@@ -81,7 +81,7 @@ jobs:
       - checkout
 
       - setup_remote_docker:
-          version: 19.03.13
+          version: 20.10.11
           docker_layer_caching: true
 
       - run:
@@ -149,7 +149,7 @@ jobs:
       - checkout
 
       - setup_remote_docker:
-          version: 19.03.13
+          version: 20.10.11
           docker_layer_caching: true
 
       - run:
