--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,7 +168,7 @@ jobs:
 workflows:
   test-build-deploy:
     jobs:
-      # - test
+      - test
       ### dev ###
       - build_image:
           name: build-dev
