Add production workflow name to live

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,7 +271,7 @@ workflows:
           requires:
             - tag_production
       - deploy_image_to_live_prod:
-          name: deploy-production
+          name: deploy-production-live
           env_name: production
           requires:
             - tag_production
