--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,7 @@ jobs:
     <<: *cloud_container
     parameters:
       env_name:
-        type: production
+        type: string
     steps:
       - checkout
 
