Adding court slug to match data from API

--- a/config/court_slugs.yml
+++ b/config/court_slugs.yml
@@ -20,15 +20,18 @@ centralisation:
   - slough-county-court-and-family-court
   - norwich-combined-court-centre
   - milton-keynes-county-court-and-family-court
+  - milton-keynes-magistrates-court-and-family-court
   - peterborough-combined-court-centre
   - staines-county-court-and-family-court
   - watford-county-court-and-family-court
   - guildford-county-court-and-family-court
   - reading-county-court-and-family-court
   - oxford-combined-court-centre
+  - oxford-and-southern-oxfordshire-magistrates-court
   - luton-justice-centre
   # 4th rollout - 22/04/2021
   - carlisle-combined-court
+  - carlisle-magistrates-court
   - barrow-in-furness-county-court-and-family-court
   - preston-crown-court-and-family-court-sessions-house
   # 5th rollout - 27/04/21
@@ -60,6 +63,7 @@ centralisation:
   - bournemouth-and-poole-county-court-and-family-court
   - bristol-civil-and-family-justice-centre
   - exeter-combined-court-centre
+  - exeter-law-courts
   - gloucester-and-cheltenham-county-and-family-court
   - plymouth-combined-court
   - portsmouth-combined-court-centre
@@ -75,12 +79,14 @@ centralisation:
   - northampton-magistrates-court
   # 9th rollout - 25/05/21
   - caernarfon-justice-centre
+  - caernarfon--justice-centre
   - cardiff-civil-and-family-justice-centre
   - carmarthen-county-court-and-family-court
   - haverfordwest-county-court-and-family-court
   - newport-south-wales-county-court-and-family-court
   - swansea-civil-justice-centre
   - wrexham-county-and-family-court
+  - wrexham-county-and-family--court
   - bedford-county-court-and-family-court
   - canterbury-combined-court-centre
   - hertford-county-court-and-family-court
