RST-4416 Add slack integration to track down bug

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,6 @@ AUTH0_CLIENT_SECRET=client-secret
 # having to go all the trouble of getting Auth0 credentials, just uncomment this.
 #
 # AUTH0_BYPASS_LOCALHOST=1
+
+SLACK_WEBHOOK_URL=https://www.example.com
+SLACK_WEBHOOK_ENV=dev
