--- a/.env.test.example
+++ b/.env.test.example
@@ -4,3 +4,6 @@ SESSION_EXPIRES_IN_MINUTES=60
 SESSION_WARNING_WHEN_REMAINING=5
 GOVUK_NOTIFY_API_KEY=mocked-in-tests
 GOVUK_NOTIFY_BEARER_TOKEN=mocked-in-tests
+SLACK_WEBHOOK_URL=https://www.example.com
+SLACK_WEBHOOK_ENV=''
+
