--- a/charts/c100-application/values.stg.template.yaml
+++ b/charts/c100-application/values.stg.template.yaml
@@ -2,3 +2,5 @@ base:
   # Don't modify below here
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
+  redis:
+    url: "redis://${SERVICE_NAME}-redis-master:6379"
