--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectName=c100 :: application
 sonar.projectKey=c100-application
 sonar.sources=app, config, db, lib
 sonar.exclusions=app/assets/**/*
+sonar.ruby.coverage.reportPaths=coverage/coverage.json
