--- a/charts/c100-application/templates/cronjob_payments.yaml
+++ b/charts/c100-application/templates/cronjob_payments.yaml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: apps/v1
 kind: CronJob
 metadata:
   name: {{ template "hmcts.releasename.v2" . }}-cronjob-payments
