--- a/charts/c100-application/templates/sidekiq.yaml
+++ b/charts/c100-application/templates/sidekiq.yaml
@@ -85,7 +85,7 @@ spec:
 {{/*                secretKeyRef:*/}}
 {{/*                  name: rds-instance-c100-production*/}}
 {{/*                  key: url*/}}
-            {{ if eq .Values.global.environment "dev" }}
+            {{ if .Values.base.redis }}
             - name: DATABASE_URL
               value: postgres://{{ .Values.base.postgresql.auth.username}}:{{ .Values.base.postgresql.auth.password}}@{{ .Release.Name }}-postgresql/{{ .Values.base.postgresql.auth.database }}
             - name: REDIS_URL
