--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,13 @@ development:
 test:
   <<: *default
   database: 'c100-test'
+
 production:
   <<: *default
+  host: <%= ENV['DATABASE_HOST'] %>
+  port: 5432
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
   sslmode: <%= ENV.fetch('DATABASE_SSLMODE', 'verify-full') %>
   sslrootcert: <%= ENV['RDS_COMBINED_CA_BUNDLE'] %>
