Add keyvault to staging

--- a/charts/c100-application/values.yaml
+++ b/charts/c100-application/values.yaml
@@ -6,6 +6,7 @@ base:
   image: 'sdshmctspublic.azurecr.io/c100/application:latest'
   ingressHost: c100-application.{{ .Values.global.environment }}.platform.hmcts.net
   aadIdentityName: c100
+  useInterpodAntiAffinity: true
   keyVaults:
     c100:
       secrets:
