Try this approach

--- a/charts/c100-application/templates/sidekiq.yaml
+++ b/charts/c100-application/templates/sidekiq.yaml
@@ -1,3 +1,5 @@
+{{- $globals := .Values.global | default dict -}}
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -46,7 +48,7 @@ spec:
             preStop:
               exec:
                 command: ["./sidekiq.sh", "stop"]
-          {{ if and .Values.global .Values.global.enableKeyVaults }}
+          {{ if $globals.enableKeyVaults }}
           securityContext:
             allowPrivilegeEscalation: false
           {{- include "hmcts.interpodantiaffinity.v2" . | indent 10 }}
